# nora

./: .gitignore  CLAUDE.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml
agent-creator/: SKILL.md
backend/: config.py  database.py  main.py  state.py
backend/api/: auth.py  calendar.py  deps.py  message.py  notes.py  reminders.py  shopping_lists.py  voice.py
backend/handlers/: calendar.py  chat.py  help.py  notes.py  reminders.py  shopping_lists.py
backend/pipeline/: combined.py  dispatcher.py  intent_parser.py  models.py  router.py
backend/reminders/: check_reminders.py
backend/services/: chroma_client.py  google_calendar.py  openai_client.py  qdrant_client.py  tts.py  whisper.py
backend/telegram/: bot.py  handlers.py
data/: nora.db  preferences.json  state.json
data/chroma/: chroma.sqlite3
data/notes/: 260312-180424-pow.txt  260313-083649-ilj.txt
data/shopping_lists/: 20260312.txt
src/nora.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_api_auth.py  test_reminders_handler.py  test_router.py
